# humannode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml  build-apk.yml  lint-test.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
assets/models/: model_registry.json
assets/prompts/: system_agent.txt  system_coding.txt  system_creative.txt  system_default.txt
integration_test/: agent_e2e_test.dart  app_test.dart
ios/: Podfile
ios/Runner/: Info.plist
lib/: humannode_app.dart  main.dart  nomad_app.dart
lib/agent/: agent_controller.dart  agent_loop.dart  agent_memory.dart  agent_prompt_builder.dart  agent_state.dart  nudge.dart  reflexion.dart
lib/config/: app_config.dart  environment.dart  theme.dart  typography.dart
lib/inference/: context_manager.dart  inference_engine.dart  llama_bridge.dart  llama_types.dart  model_loader.dart  sampler.dart  tokenizer.dart
lib/l10n/: app_en.arb  app_es.arb  app_ja.arb  app_ko.arb  app_zh.arb
lib/models/: conversation.dart  conversation_branch.dart  generation_params.dart  message.dart  message_content.dart  model_info.dart  model_preset.dart  tool_call.dart
lib/providers/: agent_provider.dart  chat_provider.dart  conversations_provider.dart  inference_provider.dart  models_provider.dart  settings_provider.dart  (+1 more)
native/: CMakeLists.txt  build-android.sh  build-ios.sh  llama_bindings.cpp  llama_bindings.h
(+131 files in other folders)
