cmake_minimum_required(VERSION 3.22)
project(nomad_native LANGUAGES C CXX)
set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(llama.cpp EXCLUDE_FROM_ALL)
add_library(llama_bridge SHARED llama_bindings.cpp llama_bindings.h)
target_link_libraries(llama_bridge PRIVATE llama ggml)
target_include_directories(llama_bridge PRIVATE llama.cpp/include)
